# CraftBuddy-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
src/: wsgi.py
src/app/: __init__.py
src/app/api/: crafting_grids.py  errors.py  games.py  items.py
src/app/models/: game.py
src/app/services/: crafting_service.py  game_service.py
tests/: conftest.py
tests/api/: test_amount_craftable_for_item.py  test_crafting_grid.py  test_games.py  test_stats.py
