[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CraftBuddy-backend"
version = "0.1.0"
description = "Backend API server for CraftBuddy"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest==8.4.1", "pytest-cov==6.2.1"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
